<resources>
    <string name="app_name">BestFriends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    // Settings
    <string name="action_settings">Настройки</string>
    <string name="hide_list_kido">Скрыть раздел "Список Кидо"</string>
    <string name="hide_tp_kido">Скрыть раздел "Молитвы Отца"</string>
    <string name="hide_calendar">Скрыть раздел "Небесный календарь"</string>
    <string name="hide_korean">Скрыть раздел "Корейский"</string>
    <string name="hide_exercises">Скрыть раздел "Зарядка ИО"</string>
    <string name="hide_video">Скрыть раздел "Видео"</string>
    <string name="hide_birthday">Скрыть раздел "Дни рождения"</string>
    <string name="hide_contacts">Скрыть раздел "Контакты"</string>
    <string name="notification_birthday">Уведомления о днях рождения</string>
    <string name="notification_calendar">Уведомления о дате</string>
    <string name="description_notif_calendar">Уведомление о дате будет приходить каждое утро в 6:00</string>
    <string name="save_settings">Сохранить изменения</string>
    <string name="data_saved">Данные успешно сохранены</string>

    // YouTube
    <string name="player_error">Error initializing YouTube player: %s</string>

    // Dialog
    <string name="add_new_person">Add new person</string>
    <string name="add_person">Add person</string>
    <string name="edit_person">Edit person</string>
    <string name="cancel">Cancel</string>
    <string name="task_cancelled">Задача отменена</string>
    <string name="something_wrong">Что-то пошло не так. Проверьте свои входные значения</string>
    <string name="error_email">Неверный Email</string>

    // Timer
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="reset">Сброс</string>

    // Kajon mense
    <string name="one"><b>一(일)</b> 천일국 주인 우리 가정​은 참사랑을 중심하고, 본향​땅을 찾아, 본연의 창조이상인 지상천국과 천상천국을 창건할 것을 맹세하나이다.</string>
    <string name="two"><b>二(이)</b> 천일국 주인 우리 가정은 참사랑을 중심하고, 하늘부모님과 참부모님을 모시어, 천주의 대표적 가정이 되며 중심적 가정이 되어, 가정에서는 천주에서는 효자, 국가에서는 충신 세계에서는 성인, 성자의 가정의 도리를 완성할 것을 맹세하나이다.</string>
    <string name="three"><b>三(삼)</b> 천일국 주인 우리 가정은 참사랑을 중심하고, 사대심정권과 삼대왕권과 황족권을 완성할 것을 맹세하나이다.</string>
    <string name="four"><b>四(사)</b> 천일국 주인 우리 가정은 참사랑을 중심하고, 하늘부모님의 창조이상인 천주 대가족을 형성하여,자유와 평화와 통일과 행복의 세계를 완성할 것을 맹세하나이다.</string>
    <string name="five"><b>五(오)</b> 천일국 주인 우리 가정은 참사랑을 중심하고, 매일 주체적 천상세계와 대상적 지상세계의 통일을 향해 전진적 발전을 촉진화할 것을 맹세하나이다.</string>
    <string name="six"><b>六(육)</b> 천일국 주인 우리 가정은 참사랑을 중심하고, 하늘부모님과 참부모님의 대신가정으로서, 천운을 움직이는 가정이 되어, 하늘의 축복을 주변에 연결시키는 가정을 완성할 것을 맹세하나이다.</string>
    <string name="seven"><b>七(칠)</b> 천일국 주인 우리 가정은 참사랑을 중심하고, 본연의 혈통과 연결된 위하는 생활을 통하여 심정문화세계를 완성할 것을 맹세하나이다.</string>
    <string name="eight"><b>八(팔)</b> 천일국 주인 우리 가정은 참사랑을 중심하고, 천일국시대를 맞이하여 절대신앙, 절대사랑, 절대복종으로 신인애 일체 이상을 이루어 지상천국과 천상천국의 해방권​과 석방권을​ 완성할 것을 맹세하나이다.</string>

    // drawer navigation
    <string name="home_page">Главная</string>
    <string name="tp_photo">TP фото</string>
    <string name="tp_mPhoto">Истинные Родители</string>
    <string name="tp_kido">Молитвы ИО</string>
    <string name="tp_mKido">Молитвы Истинного Отца</string>
    <string name="mense">가정맹세</string>
    <string name="books">Книги</string>
    <string name="calendar">Календарь</string>
    <string name="kido_list">Список Кидо</string>
    <string name="korean">Корейский</string>
    <string name="birthday">Дни рождения</string>
    <string name="exercises">Зарядка ИО</string>
    <string name="mExercises">Зарядка Истинного Отца</string>
    <string name="tp_video">Видео</string>
    <string name="contact">Контакты</string>
    <string name="settings">Настройки</string>
    <string name="communicate">Связаться</string>
    <string name="share">Поделиться</string>
    <string name="send">Отправить сообщение</string>

    // TP kido books
    <string name="pr_nadezdy">Молитвы надежды</string>
    <string name="pr_pobedy">Молитвы победы</string>
    <string name="pr_pochtitelnosty">Молитвы почтительности</string>
    <string name="pr_serdca">Молитвы сердца</string>
    <string name="pr_voskresheniya">Молитвы воскрешения</string>
    <string name="pr_zelaniya">Молитвы желания</string>

    // korean
    <string name="osnova">Основа</string>
    <string name="grammar">Грамматика</string>
            // home
    <string name="enter_in_korean"><b>Введение в корейский</b></string>
    <string name="korean_topic"><b><font color="#FFA500">- 은/는</font></b> (topic marker)</string>
    <string name="korean_object"><b><font color="#FFA500">- 을/를</font></b> (object marker)</string>
    <string name="korean_subject"><b><font color="#FFA500">-이/가</font></b> (subject marker)</string>
    <string name="korean_this"><b><font color="#FFA500">이/그/저</font></b> (this/that/that)</string>

    <string name="tenses"><b>Времена</b></string>
    <string name="korean_future"><b><font color="#FFA500">-ㄹ/을 거예요</font></b> (future tens)</string>
    <string name="korean_progressive"><b><font color="#FFA500">-고 있다</font></b> (progressive tens)</string>
    <string name="korean_present"><b><font color="#FFA500">-아/어요</font></b> (present tens)</string>
    <string name="korean_past"><b><font color="#FFA500">-았/었어요</font></b> (past tens)</string>

    <string name="negative_expressions"><b>Негативный оттенок выражения</b></string>
    <string name="korean_not_be"><b><font color="#FFA500">-이/가 아니에요</font></b> (to not be)</string>
    <string name="korean_cannot"><b><font color="#FFA500">-지않다</font></b> (cannot)</string>
    <string name="korean_not_verb"><b><font color="#FFA500">-지않다</font></b> (not)</string>
    <string name="korean_not_noun"><b><font color="#FFA500">안 V/A</font></b> (not)</string>

    <string name="particles"><b>Практические</b></string>
    <string name="also"><b><font color="#FFA500">도</font></b> (also/to/even)</string>
    <string name="unusually"><b><font color="#FFA500">따라</font></b> (unusually)</string>
    <string name="every"><b><font color="#FFA500">마다</font></b> (every/each)</string>
    <string name="much"><b><font color="#FFA500">만큼</font></b> (as much as)</string>
    <string name="only"><b><font color="#FFA500">밖에</font></b> (only/nothing but)</string>
    <string name="more"><b><font color="#FFA500">보다</font></b> (more..than/~er tha)</string>
    <string name="time"><b><font color="#FFA500">에</font></b> (time/place particle)</string>
    <string name="to"><b><font color="#FFA500">에게/한테/께</font></b> (to)</string>
    <string name="in"><b><font color="#FFA500">에서</font></b> (in/at/from)</string>
    <string name="of"><b><font color="#FFA500">의</font></b> (of)</string>
    <string name="like"><b><font color="#FFA500">처럼</font></b> (like/as..as)</string>

    <string name="listing"><b>Перечень и контраст</b></string>
    <string name="but_than"><b><font color="#FFA500">-ㄴ/는답고</font></b> (but_than..)</string>
    <string name="although"><b><font color="#FFA500">-ㄴ/은/는 데도</font></b> (although, even though)</string>
    <string name="not_only"><b><font color="#FFA500">-ㄹ/을 뿐만 아니라</font></b> (not only ~ but also)</string>
    <string name="or"><b><font color="#FFA500">-거나</font></b> (or)</string>
    <string name="and"><b><font color="#FFA500">-고</font></b> (and/and then)</string>
    <string name="but"><b><font color="#FFA500">-지만</font></b> (but)</string>

    <string name="time_expressions"><b>Временные выражения</b></string>
    <string name="after_action"><b><font color="#FFA500">-ㄴ/은 다음에</font></b> (after some action)</string>
    <string name="during"><b><font color="#FFA500">-ㄹ/을 때</font></b> (during/when)</string>
    <string name="upon_finishing"><b><font color="#FFA500">-고 나서</font></b> (upon finishing/and then)</string>
    <string name="before"><b><font color="#FFA500">-기 전에</font></b> (before some action)</string>
    <string name="do_sth"><b><font color="#FFA500">-아/어서(1)</font></b> (do sth and then do sth)</string>
    <string name="kor_while"><b><font color="#FFA500">-으면서</font></b> (while)</string>
    <string name="soon"><b><font color="#FFA500">-자마자</font></b> (as soon as/right after)</string>

    <string name="ability"><b>Способность и возможность</b></string>
    <string name="cant_be"><b><font color="#FFA500">-ㄹ/을 리가 없다</font></b> (it can`t be..)</string>
    <string name="cant_do"><b><font color="#FFA500">-ㄹ/을 수 없다</font></b> (can`t do sth)</string>
    <string name="can_do"><b><font color="#FFA500">-ㄹ/을 수 있다</font></b> (can do sth)</string>

    <string name="demands"><b>Требования, Обязательства, Разрешения, Запрет</b></string>
    <string name="allowed"><b><font color="#FFA500">-아/어도 되다</font></b> (allowed to, is it OK if..)</string>
    <string name="must"><b><font color="#FFA500">-아/어야 되다/하다</font></b> (must/have to)</string>
    <string name="not_allowed"><b><font color="#FFA500">-으면 안 되다</font></b> (be not allowed)</string>
    <string name="please"><b><font color="#FFA500">-지 마세요</font></b> (please don`t)</string>

    <string name="hope"><b>Выражения надежды</b></string>
    <string name="want"><b><font color="#FFA500">-고 싶다</font></b> (want to)</string>
    <string name="wish"><b><font color="#FFA500">-았/었으면 좋겠다</font></b> (wish/hope/want)</string>

    <!-- -고 해서-->
    <!-- -기 때문에-->
    <!-- -느라고-->
    <!-- -는 바람에-->
    <!-- -아/어서 (2)-->
    <!-- -으니까 (1)-->

    // grammar
    <string name="aso">-아/어서 или -으니까</string>
    <string name="eso">-에 или -에서</string>
    <string name="numbers">Корейские числительные</string>
    <string name="spacing">Интервал в корейском</string>
    <string name="irregular_t">Неправильный глагол <b>ㄷ</b></string>
    <string name="irregular_r">Неправильный глагол <b>ㄹ</b></string>
    <string name="irregular_p">Неправильный глагол <b>ㅂ</b></string>
    <string name="irregular_s">Неправильный глагол <b>ㅅ</b></string>
    <string name="irregular_ry">Неправильный глагол <b>르</b></string>
    <string name="irregular_yi">Неправильный глагол <b>으</b></string>
</resources>
