<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_page_black"
            android:title="@string/home_page" />

        <item
            android:id="@+id/nav_mense"
            android:icon="@drawable/ic_mense"
            android:title="@string/mense" />

        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_library_books"
            android:title="@string/books" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_kido"
            android:icon="@drawable/ic_people"
            android:title="@string/kido_list" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/tp_video" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
</menu>
